syntax = "proto3";

package bls;

service SignService {
    rpc SignString (SignRequest) returns (SignReply) {}
    rpc SendSign (SendSignature) returns (SignReply) {}
}

message SignRequest {
    //string data = 1;
    string sharedParams = 1;
    bytes sharedG = 2;
}

message SignReply {
    string data = 1;
    bytes signature = 2;
    bytes publickey = 3;
}

message SendSignature{
    string sharedParams = 1;
    bytes sharedG = 2;
    string data = 3;
    bytes signature = 4;
}
